# SchuetzenManager

./: .gitignore  CLAUDE.md  README.md  TECHNICAL.md
.claude/: launch.json
.github/workflows/: ci.yml  docker-release.yml  release.yml
Legacy/: .classpath  .project  build.fxbuild
Legacy/src/application/: Main.java
Legacy/src/database/: Database.java
Legacy/src/model/: RandomRoundRobin.java  SeasonRow.java
Legacy/src/pdf/: PDFFactory.java
Legacy/src/tools/: SendMail.java
Legacy/src/view/: AdditionalShoot.fxml  EditDateInfo.java  EditTeam.fxml  MainWindow.java  MatchResult.java  MatchWeek.fxml  MatchWeek.java  NoSelectionModel.java  ShootingAdministration.java  UserAdministration.fxml  UserAdministration.java  (+2 more)
Rework/: .dockerignore  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json
Rework/apps/desktop/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
Rework/apps/desktop/src-tauri/icons/: icon.icns
Rework/apps/desktop/src-tauri/src/: lib.rs  vault.rs
src/custom/: IntegerTextField.java
src/model/: Agegroup.java  Match.java  PersonalScore.java  Responsible.java  Season.java  Shoot.java  TableRow.java  Team.java  User.java
src/property/: PropertiyFactory.java
src/view/: AdditionalShoot.java  Conflict.fxml  Conflict.java  Copy of MatchResult.fxml  CreateSeason.fxml  CreateSeason.java  EditDateInfo.fxml  EditTeam.java  MainWindow.fxml  MatchResult.fxml  Responsible.fxml  ResponsibleView.java  ShootingAdministration.fxml  Sync.fxml  Sync.java  WeekToDateElement.fxml  WeekToDateElement.java
(+77 files in other folders)
