[package]
name = "schuetzenmanager"
version = "0.1.3"
description = "SchützenManager Desktop-Anwendung"
authors = ["Fabian L."]
license = ""
repository = "https://github.com/EinfachFabsTV/SchuetzenManager"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
rand = "0.8.6"
data-encoding = "2.6.0"
zeroize = { version = "1.8", features = ["derive"] }
